bug 751096 Possibility for svg images with \image command in LaTeX
When using a svg image with the \image command in LaTeX we get the message:
```
! LaTeX Error: Unknown graphics extension: .svg.

See the LaTeX manual or LaTeX Companion for explanation.
```
when generating the refman.pdf.

Enabling can be done by:
-    using the svg package
      note:
      - LATEX_CMD should not be quoted in the `make.bat` / `Makefile`
      - properly handle underscores in svg images (see also: https://tex.stackexchange.com/a/525613/44119)
-    installing the external package Inkscape.
-    enabling the shell escape with the LaTeX processor (normally the option -enable-write18).

--- a/templates/latex/header.tex
+++ b/templates/latex/header.tex
@@ -30,6 +30,7 @@
   $extralatexstylesheet
 
   \usepackage{graphicx}
+  \usepackage{svg}
   \usepackage[utf8]{inputenc}
   \usepackage{makeidx}
   \PassOptionsToPackage{warn}{textcomp}
