--- a/templates/latex/header.tex
+++ b/templates/latex/header.tex
@@ -77,6 +77,7 @@
     left=2.5cm,%
     right=2.5cm%
   }
+  \usepackage{changepage}
 
   % Allow a bit of overflow to go unnoticed by other means
   \tolerance=750
