etocsetlevel for new subsub...sections

--- a/templates/latex/header.tex
+++ b/templates/latex/header.tex
@@ -193,6 +193,12 @@
   % in page table of contents
   \usepackage{etoc}
   \etocsettocstyle{\doxytocparskip}{\doxynormalparskip}
+  \etocsetlevel{subsubsubsection}{4}
+  \etocsetlevel{subsubsubsubsection}{5}
+  \etocsetlevel{subsubsubsubsubsection}{6}
+  \etocsetlevel{subsubsubsubsubsubsection}{7}
+  \etocsetlevel{paragraph}{8}
+  \etocsetlevel{subparagraph}{9}
 
   % prevent numbers overlap the titles in toc
   \renewcommand{\numberline}[1]{#1~}
