--- a/templates/latex/header.tex
+++ b/templates/latex/header.tex
@@ -6,6 +6,8 @@
   % to overcome problems with too many open files
   \let\mypdfximage\pdfximage\def\pdfximage{\immediate\mypdfximage}
 
+  \pdfminorversion=7
+
   % Set document class depending on configuration
 %%BEGIN COMPACT_LATEX
   \documentclass[twoside]{article}
@@ -24,7 +26,12 @@
   %%
 
   % Packages required by doxygen
-  \usepackage{fixltx2e} % for \textsubscript
+  \makeatletter
+  \providecommand\IfFormatAtLeastTF{\@ifl@t@r\fmtversion}
+  \makeatother
+  \IfFormatAtLeastTF{2016/01/01}{}{\usepackage{fixltx2e}} % for \textsubscript
+  \IfFormatAtLeastTF{2015/01/01}{\pdfsuppresswarningpagegroup=1}{}
+
   \usepackage{doxygen}
 
   $extralatexstylesheet
