Warnings in LaTeX output (2)
When looking at the doxygen PDF / LaTeX documentation we see  warnings like:
```
LaTeX Warning: Command \underbar  has changed.
               Check if current package is valid.

LaTeX Warning: Command \underline  has changed.
               Check if current package is valid.
```
this is due to the `sectsty` package (looks like to be unmaintained), we only use from this package the `allsectionsfont`, included relevant part in doxygen and renamed parts.

```
Package newunicodechar Warning: Redefining Unicode character
```
We want to (re)define some unicode characters, so taking the relevant part from the package `newunicodechar` and created the command `doxynewunicodechar` without the warning (had to be done in latexgen.cpp as the code is used in the formulas and the "normal" output).

```
LaTeX Warning: Command \LT@p@ftntext  has changed.
               Check if current package is valid.
```
the `longtable` package as used by doxygen missed a small update that prevented this warning.

```
Package textcomp Warning: Symbol \textasciidieresis not provided by
(textcomp)                font family phv in TS1 encoding
```
redefining the "pure" umlaut character in more "native" LaTeX

--- a/templates/latex/header.tex
+++ b/templates/latex/header.tex
@@ -56,8 +56,7 @@
   % set main and monospaced font
   $latexfont
 
-  \usepackage{sectsty}
-  \allsectionsfont{%
+  \doxyallsectionsfont{%
     \fontseries{bc}\selectfont%
     \color{darkgray}%
   }
