Usage of updated etoc package
For pull request #9366 an updated version of the LaTeX `etoc` package is required.
To be able to run the code also with older versions of LaTeX (i.e. versions that not yet have these updates) the updated package is provided as a local package.

--- a/doc/doxygen_manual.tex
+++ b/doc/doxygen_manual.tex
@@ -128,7 +128,7 @@
 \doxynormalparskip
 \hbadness=750
 \tolerance=750
-\usepackage{etoc}
+\IfFormatAtLeastTF{2023/05/01}{\usepackage[deeplevels]{etoc}}{\usepackage[deeplevels]{etoc_doxygen}}
 \etocsettocstyle{\doxytocparskip}{\doxynormalparskip}
 \etocsetlevel{subsubsubsection}{4}
 \etocsetlevel{subsubsubsubsection}{5}
