--- a/templates/latex/header.tex
+++ b/templates/latex/header.tex
@@ -202,7 +202,7 @@
 
 
   % in page table of contents
-  \usepackage{etoc}
+  \IfFormatAtLeastTF{2023/05/01}{\usepackage[deeplevels]{etoc}}{\usepackage[deeplevels]{etoc_doxygen}}
   \etocsettocstyle{\doxytocparskip}{\doxynormalparskip}
   \etocsetlevel{subsubsubsection}{4}
   \etocsetlevel{subsubsubsubsection}{5}
