--- a/doc/doxygen_manual.tex
+++ b/doc/doxygen_manual.tex
@@ -128,6 +128,9 @@
 \doxynormalparskip
 \hbadness=750
 \tolerance=750
+\makeatletter
+\providecommand\IfFormatAtLeastTF{\@ifl@t@r\fmtversion}
+\makeatother
 \IfFormatAtLeastTF{2023/05/01}{\usepackage[deeplevels]{etoc}}{\usepackage[deeplevels]{etoc_doxygen}}
 \etocsettocstyle{\doxytocparskip}{\doxynormalparskip}
 \etocsetlevel{subsubsubsection}{4}
