--- a/doc/doxygen_manual.tex
+++ b/doc/doxygen_manual.tex
@@ -12,7 +12,7 @@
 % Documents produced by Doxygen are derivative works derived from the
 % input used in their production; they are not affected by this license.
 
-\nonstopmode
+\batchmode
 \pdfminorversion=7
 \pdfsuppresswarningpagegroup=1
 \documentclass{book}
