Enable possible other LaTeX error modes
Besides the supported `\batchmode` theer are a number of other "error" modes for LaTeX available, they can be enabled as well.

--- a/templates/latex/header.tex
+++ b/templates/latex/header.tex
@@ -1,7 +1,5 @@
   % Handle batch mode
-%%BEGIN LATEX_BATCHMODE
-  \batchmode
-%%END LATEX_BATCHMODE
+  $latex_batchmode
 
   % to overcome problems with too many open files
   \let\mypdfximage\pdfximage\def\pdfximage{\immediate\mypdfximage}
