--- a/templates/latex/doxygen.sty
+++ b/templates/latex/doxygen.sty
@@ -586,7 +586,7 @@
 \newcounter{subsubsubsection}[subsubsection]
 \newcounter{subsubsubsubsection}[subsubsubsection]
 \newcounter{subsubsubsubsubsection}[subsubsubsubsection]
-\newcounter{subsubsubsubsubsubsection}[subsubsubsubsection]
+\newcounter{subsubsubsubsubsubsection}[subsubsubsubsubsection]
 \renewcommand{\thesubsubsubsection}{\thesubsubsection.\arabic{subsubsubsection}}
 \renewcommand{\thesubsubsubsubsection}{\thesubsubsubsection.\arabic{subsubsubsubsection}}
 \renewcommand{\thesubsubsubsubsubsection}{\thesubsubsubsubsection.\arabic{subsubsubsubsubsection}}
@@ -643,6 +643,8 @@
 \newcommand\l@subsubsubsubsection{\@dottedtocline{5}{6.1em}{9.4em}}
 \newcommand\l@subsubsubsubsubsection{\@dottedtocline{6}{6.1em}{11em}}
 \newcommand\l@subsubsubsubsubsubsection{\@dottedtocline{7}{6.1em}{12.6em}}
+\renewcommand\l@paragraph{\@dottedtocline{8}{6.1em}{14.2em}}
+\renewcommand\l@subparagraph{\@dottedtocline{9}{6.1em}{15.8em}}
 \makeatother
 % the sectsty doesn't look to be maintained but gives, in our case, some warning like:
 % LaTeX Warning: Command \underline  has changed.
