--- a/templates/latex/etoc_doxygen.sty
+++ b/templates/latex/etoc_doxygen.sty
@@ -14,7 +14,7 @@
 %% yet providing version 1.2a or later of etoc, whose
 %% deeplevels feature is required.
 %%
-%% The orginal source etoc.dtx (only of the latest version at
+%% The original source etoc.dtx (only of the latest version at
 %% any given time) is available at
 %% 
 %%     https://ctan.org/pkg/etoc
@@ -1629,7 +1629,7 @@
            \fi
          \fi
          \ifEtoc@localtoc
-         % trying to mimick a section title but there is no \sectionheadstart
+         % trying to mimic a section title but there is no \sectionheadstart
          % there is no \printsectiontitle etc... Oh well I will be more
          % radical then
             \@namedef{@\Etoc@currext maketitle}{%
