Consistent use of TIMESTAMP
Removing references to `HTML_TIMESTAMP` and `LATEX_TIMESTAMP`  that were left after issue #5797 and pull request #10045

--- a/templates/latex/header.tex
+++ b/templates/latex/header.tex
@@ -241,10 +241,10 @@
 %%END PROJECT_NUMBER
   \vspace*{1cm}
   {\large $generatedby Doxygen $doxygenversion}\\
-%%BEGIN LATEX_TIMESTAMP
+%%BEGIN TIMESTAMP
     \vspace*{0.5cm}
     {\small $datetime}
-%%END LATEX_TIMESTAMP
+%%END TIMESTAMP
   \end{center}
   \end{titlepage}
 
