--- a/doc/doxygen_manual.tex
+++ b/doc/doxygen_manual.tex
@@ -205,7 +205,7 @@ Written by Dimitri van Heesch\\[2ex]
   \subinputfrom{examples/diagrams/latex/}{refman_doc}
 }{}
 
-\chapter{Modules Example}\label{modules_example}\hypertarget{modules_example}{}
+\chapter{Grouping Example}\label{modules_example}\hypertarget{grouping_example}{}
 \subinputfrom{examples/group/latex/}{refman_doc}
 \chapter{Member Groups Example}\label{memgrp_example}\hypertarget{memgrp_example}{}
 \subinputfrom{examples/memgrp/latex/}{refman_doc}
