new page was missing in some indices.
Also fixed some typos, did some rewording, and added some more links.

--- a/doc/doxygen_manual.tex
+++ b/doc/doxygen_manual.tex
@@ -161,6 +161,7 @@ Written by Dimitri van Heesch\\[2ex]
 \input{install}
 \input{starting}
 \input{docblocks}
+\input{additional}
 \input{markdown}
 \input{lists}
 \input{grouping}
