--- a/doc/additional.dox
+++ b/doc/additional.dox
@@ -121,7 +121,7 @@ start to populate our treeview.
 If you notice that your tree is more like a pile of leaves then you can remedy this by checking
 out \ref subpaging.
 
-This disucssion should give you some direction on how to build a scalable manual to enrich your documentation,
+This discussion should give you some direction on how to build a scalable manual to enrich your documentation,
 from here you might want to customize your \ref layout "layout".
 
 */
